content section draft done but still needd to fix spacing

--- a/style.css
+++ b/style.css
@@ -43,12 +43,16 @@ html {
   max-width: 80rem; 
 }
 
+.width-max {
+  max-width: 100rem; 
+}
+
 
 
 
 /* stack: control vertical space template */
 .stack-sm > * + * {
-  margin-top: 1rem
+  margin-top: 0
 }
 
 .stack-md > * + * {
@@ -65,6 +69,10 @@ html {
 
 .stack-xl > * + * {
   margin-top: 2rem
+}
+
+.stack-xxl > * + * {
+  margin-top: 5rem
 }
 
 /* Flex template */
@@ -85,6 +93,18 @@ html {
 
 .justify-end{
   justify-content: end;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-space-between{
+  justify-content: space-between;
+}
+
+.gap-lg {
+  gap: 5rem; 
 }
 
 
@@ -116,6 +136,16 @@ h1 {
   font-size: 2.4rem; 
   color:var(--black)
 }
+
+h2 {
+  font-size: 1.4rem 
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+
 
 .hero-p {
   font-size: 1.4rem;
@@ -151,7 +181,38 @@ h1 {
 }
 
 
+main {
+  background-color: var(--grey);
+}
 
+.content-section {
+  padding: 2rem; 
+}
+
+.content-element {
+
+  text-align: right;
+}
+
+.content-element > .content-text > p {
+  font-size: 1.4rem
+}
+
+.content-text-title-group {
+  background-color: green;
+}
+
+.content-text h2, .content-text h3 {
+  color: var(--black)
+}
+
+.content-text p {
+  color: var(--white)
+}
+
+.associate-section {
+  background-color: red;
+}
 
 
 
